# sm_connect

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: app.rs  aws.rs  components.rs  main.rs  ui.rs
src/app/: config.rs
src/components/: instance_details.rs  instance_table.rs  region_list.rs  text_input.rs
